--- a/notebook/1_data_ingest.ipynb
+++ b/notebook/1_data_ingest.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7dafca57-e799-4026-8f10-eddec9121121",
+   "metadata": {},
+   "source": [
+    "Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5f93c573-2f53-4b15-8038-0011759f0c2b",
    "metadata": {},
    "outputs": [
@@ -15,7 +23,7 @@
     }
    ],
    "source": [
-    "# === Import required libraries ===\n",
+    "# Import required libraries \n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,12 +31,20 @@
     "\n",
     "# Set style for visualizations\n",
     "sns.set(style=\"whitegrid\")\n",
-    "print(\"Libraries imported successfully.\")"
+    "print(\"Libraries imported successfully.\") # to be sure that all libraries are imported "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21bb47e7-ede6-4240-a568-b07d8ef61e95",
+   "metadata": {},
+   "source": [
+    "Load Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7313d210-c0df-4cef-aa1c-cab8f1390a0a",
    "metadata": {},
    "outputs": [
@@ -36,23 +52,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dataset loaded successfully\n",
+      "Dataset loaded successfully\n",
       "Number of rows and columns: (1433, 63)\n"
      ]
     }
    ],
    "source": [
-    "# === Load the Original Dataset ===\n",
+    "# Load the Original Dataset\n",
     "data_path = \"../data/raw/mental-heath-in-tech-2016_20161114.csv\"\n",
     "df = pd.read_csv(data_path)\n",
     "\n",
-    "print(\"✅ Dataset loaded successfully\")\n",
+    "print(\"Dataset loaded successfully\")\n",
     "print(\"Number of rows and columns:\", df.shape)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "313bd72e-453c-4969-9f9e-5a81f58710a1",
+   "metadata": {},
+   "source": [
+    "Display First Rows"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1505f0b1-c23b-4882-8a73-d7cb456e0c75",
    "metadata": {},
    "outputs": [
@@ -356,19 +380,19 @@
        "[5 rows x 63 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# === Display the First 5 Rows to Understand Structure ===\n",
+    "# Display the First 5 Rows to Understand Structure \n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9317dc28-fbe8-4a7c-89fa-2bdb101078bb",
    "metadata": {},
    "outputs": [
@@ -388,7 +412,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b668e8cf-421a-4b55-8787-b1641261f4aa",
    "metadata": {},
    "outputs": [
@@ -592,14 +616,22 @@
        "max           323.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# === Summary Statistics for Numeric Columns ===\n",
+    "# Summary Statistics for Numeric Columns \n",
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a713e523-6628-4294-a916-8df02ed70bb1",
+   "metadata": {},
+   "source": [
+    " Age Distribution Plot"
    ]
   },
   {
@@ -620,7 +652,7 @@
     }
    ],
    "source": [
-    "# === Example Visualization: Age Distribution ===\n",
+    "# Example Visualization: Age Distribution\n",
     "plt.figure(figsize=(8,5))\n",
     "sns.histplot(df['What is your age?'], bins=30, kde=True)\n",
     "plt.title(\"Age Distribution Among Participants\")\n",
@@ -628,14 +660,6 @@
     "plt.ylabel(\"Number of Participants\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8908704b-8634-4c9f-8233-e97d608f7610",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
