--- a/notebook/2_preprocessing.ipynb
+++ b/notebook/2_preprocessing.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0a180671-761f-4258-bd15-adc9dcf8a3f7",
+   "metadata": {},
+   "source": [
+    "Import Libraries and Load Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "bb2888e1-e16d-4a3e-bca4-7513e8243aad",
    "metadata": {},
    "outputs": [
@@ -15,7 +23,7 @@
     }
    ],
    "source": [
-    "# === Import Required Libraries and Load Data ===\n",
+    "# Import Required Libraries and Load Data\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -24,12 +32,20 @@
     "data_path = \"../data/raw/mental-heath-in-tech-2016_20161114.csv\"\n",
     "df = pd.read_csv(data_path)\n",
     "\n",
-    "print(\"Data loaded successfully:\", df.shape)"
+    "print(\"Data loaded successfully:\", df.shape) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "113c47b6-da4e-4880-b8b1-fb008ec82343",
+   "metadata": {},
+   "source": [
+    "Clean Column Names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "d3c5a33b-a4a3-4274-9cbd-b5a17b099d2c",
    "metadata": {},
    "outputs": [
@@ -56,7 +72,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,8 +91,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "325451ac-3892-4bd6-84c3-8f8a0343a2b7",
+   "metadata": {},
+   "source": [
+    "Fix Age Outliers and Plot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "698bdae5-9246-4ad3-ac07-5993153118dc",
    "metadata": {},
    "outputs": [
@@ -99,7 +123,7 @@
     }
    ],
    "source": [
-    "# === Fix Age Outliers ===\n",
+    "# Fix Age Outliers \n",
     "# Replace unrealistic ages (e.g., <18 or >100) with NaN\n",
     "df.loc[(df['what_is_your_age'] < 18) | (df['what_is_your_age'] > 100), 'what_is_your_age'] = np.nan\n",
     "\n",
@@ -115,8 +139,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76998de9-72f9-440d-b6e9-e76d8922a17f",
+   "metadata": {},
+   "source": [
+    " Basic Gender Cleaning (First Pass)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "c4e61ddd-1e77-4bd8-a0af-872632278461",
    "metadata": {},
    "outputs": [
@@ -143,7 +175,7 @@
     }
    ],
    "source": [
-    "# === Clean Gender Column ===\n",
+    "# Clean Gender Column\n",
     "# Fill missing gender values with 'Not specified'\n",
     "df['what_is_your_gender'] = df['what_is_your_gender'].fillna('Not specified')\n",
     "\n",
@@ -165,14 +197,21 @@
     "    'non-binary': 'other'\n",
     "})\n",
     "\n",
-    "# Display unique values to confirm cleaning\n",
     "print(\"Unique gender values after cleaning:\")\n",
     "print(df['what_is_your_gender'].unique())"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9b30a4e-82bd-464e-899a-8b151ec26a41",
+   "metadata": {},
+   "source": [
+    " Advanced Gender Normalization (Second Pass)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "2ab0516f-7dfd-435e-a3db-b20cc6e53610",
    "metadata": {},
    "outputs": [
@@ -186,7 +225,7 @@
     }
    ],
    "source": [
-    "# === Normalize Gender Column ===\n",
+    "# Normalize Gender Column \n",
     "# Make sure missing values are filled\n",
     "df['what_is_your_gender'] = df['what_is_your_gender'].fillna('not specified')\n",
     "\n",
@@ -204,14 +243,21 @@
     "    else ('other' if x not in ['male', 'female', 'not specified'] else x))\n",
     ")\n",
     "\n",
-    "# Print unique values to confirm cleaning\n",
     "print(\"Unique gender values after cleaning:\")\n",
     "print(df['what_is_your_gender'].unique())"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65cc5be6-1e57-4caa-9e5a-fe6dc4602cbf",
+   "metadata": {},
+   "source": [
+    "Standardize Country Names"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "2440c46e-2a57-4ebe-bfca-40aa67cdc067",
    "metadata": {
     "scrolled": true
@@ -238,7 +284,7 @@
     }
    ],
    "source": [
-    "# === Standardize Country Names (Live In) ===\n",
+    "# Standardize Country Names (Live In) \n",
     "df['what_country_do_you_live_in'] = df['what_country_do_you_live_in'].str.strip().replace({\n",
     "    'United States of America': 'United States',\n",
     "    'USA': 'United States',\n",
@@ -255,8 +301,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9054fd8a-4ff4-4f0a-b79e-9c2136ad96f1",
+   "metadata": {},
+   "source": [
+    " Save Cleaned Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "95b9f0ee-3e7d-4e35-a7a8-66d9a0f735df",
    "metadata": {},
    "outputs": [
@@ -269,7 +323,7 @@
     }
    ],
    "source": [
-    "# === Save the Cleaned Dataset to the 'processed' Folder ===\n",
+    "# Save the Cleaned Dataset to the 'processed' Folder\n",
     "output_path = \"../data/processed/mental_health_cleaned.csv\"\n",
     "df.to_csv(output_path, index=False)\n",
     "\n",
