--- a/notebook/3_feature_engineering.ipynb
+++ b/notebook/3_feature_engineering.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ef9c41bc-05fd-46c0-8e34-0a2b7efab242",
+   "metadata": {},
+   "source": [
+    "Import Libraries and Load Cleaned Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "a08b7222-9e50-430f-a179-bffeff3ac4c1",
    "metadata": {},
    "outputs": [
@@ -229,13 +237,13 @@
        "[3 rows x 63 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# === Import Libraries and Load the Cleaned Data ===\n",
+    "# Import Libraries and Load the Cleaned Data \n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -249,8 +257,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64b221bc-ae02-4cd0-bdd6-08fdc1529834",
+   "metadata": {},
+   "source": [
+    "Gender Cleaning and Encoding"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "b344f36e-a77e-4669-9b20-5c263c9296d8",
    "metadata": {
     "scrolled": true
@@ -274,8 +290,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "21ecd81b-7863-4505-b3da-7a83671c47a1",
+   "metadata": {},
+   "source": [
+    "Simplify and Encode Country Column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "d20b8c97-e102-420e-a91c-217da477deb9",
    "metadata": {},
    "outputs": [
@@ -288,7 +312,7 @@
     }
    ],
    "source": [
-    "# === Simplify Country Categories (Keep Top 10, Group Others) ===\n",
+    "# Simplify Country Categories (Keep Top 10, Group Others) \n",
     "top_countries = df['what_country_do_you_live_in'].value_counts().head(10).index\n",
     "df['country_grouped'] = df['what_country_do_you_live_in'].apply(lambda x: x if x in top_countries else 'Other')\n",
     "\n",
@@ -300,8 +324,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d7cbb8f-0c21-4228-8dc4-c41b477631f5",
+   "metadata": {},
+   "source": [
+    "Convert Yes/No Columns to Numeric"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "9f0b1840-5ebd-4958-81cb-d79f9f0e8986",
    "metadata": {},
    "outputs": [
@@ -309,35 +341,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Boolean columns converted to numeric format\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_3608\\517432718.py:7: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  .replace({'Yes': 1, 'No': 0, 'Maybe': np.nan, 'Don’t know': np.nan})\n"
+      "Boolean columns converted to numeric format (no warnings)\n"
      ]
     }
    ],
    "source": [
-    "# === Convert Yes/No Columns to 0 and 1 ===\n",
+    "# === Convert Yes/No Columns to Numeric ===\n",
     "yes_no_columns = [col for col in df.columns if df[col].dtype == 'object' and df[col].nunique() <= 3]\n",
     "\n",
-    "for col in yes_no_columns:\n",
-    "    df[col] = (\n",
-    "    df[col]\n",
-    "    .replace({'Yes': 1, 'No': 0, 'Maybe': np.nan, 'Don’t know': np.nan})\n",
-    "    .infer_objects(copy=False)\n",
-    ")\n",
+    "pd.set_option('future.no_silent_downcasting', True)\n",
     "\n",
-    "print(\"Boolean columns converted to numeric format\")"
+    "\n",
+    "for col in yes_no_columns:\n",
+    "    df[col] = df[col].replace({\n",
+    "        'Yes': 1,\n",
+    "        'No': 0,\n",
+    "        'Maybe': np.nan,\n",
+    "        'Don’t know': np.nan\n",
+    "    })\n",
+    "    # Explicitly infer object types to avoid FutureWarning\n",
+    "    df[col] = df[col].infer_objects(copy=False)\n",
+    "\n",
+    "print(\"Boolean columns converted to numeric format (no warnings)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4866a21f-abe3-469d-9ea9-772f5bc2cbdf",
+   "metadata": {},
+   "source": [
+    "Create Age Groups"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "3084f4b4-527e-4a0f-929a-e2583aabb5ce",
    "metadata": {},
    "outputs": [
@@ -360,7 +398,7 @@
     }
    ],
    "source": [
-    "# === Create Age Groups ===\n",
+    "# Create Age Groups \n",
     "bins = [0, 25, 35, 45, 60, 100]\n",
     "labels = ['<25', '25-35', '35-45', '45-60', '60+']\n",
     "df['age_group'] = pd.cut(df['what_is_your_age'], bins=bins, labels=labels, right=False)\n",
@@ -375,8 +413,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "82044e50-3fc6-4bea-8839-5cba02aef886",
+   "metadata": {},
+   "source": [
+    " Mental Health Support Score"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "85e04e13-8ecf-4704-853d-678f9cb43b94",
    "metadata": {},
    "outputs": [
@@ -390,7 +436,7 @@
     }
    ],
    "source": [
-    "# === Create a Feature for Awareness or Support ===\n",
+    "# Create a Feature for Awareness or Support \n",
     "# Example: Does the company provide mental health benefits or discussions?\n",
     "if {'benefits', 'care_options', 'wellness_program'} <= set(df.columns):\n",
     "    df['mental_health_support_score'] = (\n",
@@ -403,8 +449,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63b488b2-927c-4e21-8b21-00ee542bbea2",
+   "metadata": {},
+   "source": [
+    " Drop Unnecessary Columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "9548c0f3-3598-460b-b5c4-7f802a239549",
    "metadata": {},
    "outputs": [
@@ -425,8 +479,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60d00619-dcd7-4796-95d7-5e83b4fd7188",
+   "metadata": {},
+   "source": [
+    " Save Final Feature-Engineered Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "efe88588-290e-45be-9f01-d6602e4c7684",
    "metadata": {},
    "outputs": [
@@ -439,7 +501,7 @@
     }
    ],
    "source": [
-    "# === Save Final Feature-Engineered Dataset ===\n",
+    "# Save Final Feature-Engineered Dataset \n",
     "output_path = \"../data/processed/mental_health_features.csv\"\n",
     "df.to_csv(output_path, index=False)\n",
     "\n",
