--- a/notebook/4_dim_reduction_clustering.ipynb
+++ b/notebook/4_dim_reduction_clustering.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ef42cae7-b8b5-42c6-a4b1-402185fdec3d",
+   "metadata": {},
+   "source": [
+    "Import Libraries and Load Feature-Engineered Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "6f7005bc-6b48-4013-9b5b-87a3e0cdb27a",
    "metadata": {},
    "outputs": [
@@ -204,13 +212,13 @@
        "[3 rows x 81 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# === Import Libraries and Load Feature-Engineered Data ===\n",
+    "# Import Libraries and Load Feature-Engineered Data \n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -228,8 +236,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d5e96df-19bb-422c-9720-49da4dc0e0f9",
+   "metadata": {},
+   "source": [
+    "Prepare Data for PCA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "58a976d8-2d20-45f7-a7d6-897a48a1ce3a",
    "metadata": {},
    "outputs": [
@@ -243,7 +259,7 @@
     }
    ],
    "source": [
-    "# === Prepare Data for PCA ===\n",
+    "# Prepare Data for PCA \n",
     "# Select only numeric columns\n",
     "numeric_df = df.select_dtypes(include=[np.number])\n",
     "\n",
@@ -259,8 +275,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1252bfbc-0e07-4cc2-b5b7-2ed325c56d7a",
+   "metadata": {},
+   "source": [
+    "Apply PCA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "dc422abd-4df3-4362-8f6c-d76ea2fb4ccf",
    "metadata": {},
    "outputs": [
@@ -284,7 +308,7 @@
     }
    ],
    "source": [
-    "# === Apply PCA ===\n",
+    "# Apply PCA \n",
     "pca = PCA(n_components=2)\n",
     "pca_result = pca.fit_transform(scaled_data)\n",
     "\n",
@@ -308,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "53db454e-bf54-4d11-a223-4326a091965f",
    "metadata": {},
    "outputs": [
@@ -331,7 +355,7 @@
     }
    ],
    "source": [
-    "# === Determine Optimal Number of Clusters (Elbow Method) ===\n",
+    "# Determine Optimal Number of Clusters (Elbow Method) \n",
     "inertia = []\n",
     "K = range(1, 11)\n",
     "\n",
@@ -351,8 +375,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e3ae508-9cbd-497b-be1c-bcff1576a458",
+   "metadata": {},
+   "source": [
+    "Determine Optimal Number of Clusters (Elbow Method)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "c863e8ad-6533-4a98-a7bb-19cbba4b300d",
    "metadata": {},
    "outputs": [
@@ -373,13 +405,13 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# === Apply K-Means Clustering ===\n",
+    "# Apply K-Means Clustering \n",
     "# Based on the elbow method result (adjust k as needed)\n",
     "optimal_k = 3  # You can change this based on the elbow plot\n",
     "\n",
@@ -391,8 +423,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a89e2ec7-2a66-420b-b999-a32301e1a053",
+   "metadata": {},
+   "source": [
+    "Visualize Clusters in PCA Space"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "b6d5da24-0586-40b9-9c95-1ae865b690bf",
    "metadata": {},
    "outputs": [
@@ -415,7 +455,7 @@
     }
    ],
    "source": [
-    "# === Visualize Clusters in PCA Space ===\n",
+    "# Visualize Clusters in PCA Space \n",
     "plt.figure(figsize=(8,6))\n",
     "sns.scatterplot(\n",
     "    x='PCA1', y='PCA2', \n",
@@ -434,8 +474,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3bb2406e-b797-4737-8f05-ca8e840b9d98",
+   "metadata": {},
+   "source": [
+    "Save Clustered Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "a2985dd7-1794-464f-8c38-64f484d67da4",
    "metadata": {},
    "outputs": [
@@ -448,7 +496,7 @@
     }
    ],
    "source": [
-    "# === Save Clustered Data ===\n",
+    "# Save Clustered Data \n",
     "output_path = \"../data/processed/mental_health_clustered.csv\"\n",
     "df.to_csv(output_path, index=False)\n",
     "\n",
